# libscope

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agents.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  sonar-project.properties  tsconfig.eslint.json  tsconfig.typecheck.json  vercel.json  vitest.config.ts
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/copilot/: mcp.json
.github/workflows/: ci.yml  codeql.yml  docker.yml  merge-gate.yml  release-please.yml  release-python.yml  release.yml  sdk-go.yml  sdk-python.yml  sonar.yml
docs/: changelog.md  contributing.md  index.md  vercel.json
docs/.vitepress/: config.ts
docs/guide/: architecture.md  code-indexing.md  configuration.md  connectors.md  dashboard.md  getting-started.md  how-search-works.md  knowledge-packs.md  lite.md  mcp-setup.md  pack-registries.md  programmatic-usage.md  troubleshooting.md  webhooks.md
docs/reference/: cli.md  configuration.md  lite-api.md  mcp-tools.md  registry.md  rest-api.md
scripts/: create-enterprise-milestone.sh
sdk/go/: README.md  analytics.go  client.go  client_test.go  connectors.go  documents.go  (+9 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/src/libscope/: __init__.py  client.py  exceptions.py  models.py
sdk/python/src/pylibscope/: __init__.py  client.py  connectors.py  exceptions.py
sdk/python/tests/: test_client.py  test_models.py
src/: LibScope.ts  config.ts  errors.ts  logger.ts
(+180 files in other folders)
