[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libscope"
version = "0.1.0"
description = "Python SDK for libscope AI knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]
