[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylibscope"
version = "1.1.0"
description = "Python SDK for the LibScope AI knowledge base"
readme = "README.md"
license = { text = "BSL-1.1" }
requires-python = ">=3.9"
authors = [{ name = "RobertLD" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.urls]
Homepage = "https://libscope.com"
Repository = "https://github.com/RobertLD/libscope"
Documentation = "https://libscope.com"
"Bug Tracker" = "https://github.com/RobertLD/libscope/issues"
